<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rootView"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".activity.ListWorkActivity">
    <com.vn.ntesco.views.NTescoSwitchButton
        android:layout_gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/switchButton"
        app:layout_constraintTop_toTopOf="parent"
        app:left_text="@string/new_report"
        app:center_text="@string/incomplete"
        app:right_text="@string/completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.vn.ntesco.views.NTesCoViewPager
        android:id="@+id/listReportViewPager"
        app:layout_constraintTop_toBottomOf="@+id/switchButton"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">

    </com.vn.ntesco.views.NTesCoViewPager>
</LinearLayout>