<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_big"
    tools:context=".activity.ChangePasswordActivity">

    <com.vn.ntesco.views.NTesCoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_password"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/font_big" />

    <com.vn.ntesco.views.NTesCoEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/bg_corner_grey"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:minHeight="@dimen/h_edit_text"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:singleLine="true"
        android:textSize="@dimen/font_big" />

    <com.vn.ntesco.views.NTesCoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/font_big" />

    <com.vn.ntesco.views.NTesCoEditText
        android:id="@+id/edtNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/bg_corner_grey"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:minHeight="@dimen/h_edit_text"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:singleLine="true"
        android:textSize="@dimen/font_big" />
    <com.vn.ntesco.views.NTesCoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_password"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/font_big" />

    <com.vn.ntesco.views.NTesCoEditText
        android:id="@+id/edtConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/bg_corner_grey"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="@dimen/h_edit_text"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:singleLine="true"
        android:textSize="@dimen/font_big" />
    <com.vn.ntesco.views.NTesCoTextView
        android:layout_marginTop="@dimen/margin_bigXX"
        android:id="@+id/btnUpdate"
        style="@style/ntesco_text_view_style"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_big"
        android:background="@drawable/bg_button_orange"
        android:minWidth="@dimen/width_button"
        android:paddingLeft="@dimen/padding_big"
        android:paddingTop="@dimen/padding_smallXX"
        android:paddingRight="@dimen/padding_big"
        android:paddingBottom="@dimen/padding_smallXX"
        android:text="@string/update_profile"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:NTesCoTextViewFont="Bold" />

</LinearLayout>