<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/margin_large"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_text"
        android:layout_marginLeft="@dimen/margin_largeXX"
        android:layout_marginRight="@dimen/margin_largeXX"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/radius_big">

        <ImageView
            android:id="@+id/ivUserName"
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/radius_big"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:src="@mipmap/ic_account" />

        <com.vn.ntesco.views.NTesCoEditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_largeXXXX"
            android:background="@null"
            android:hint="@string/user_name_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textSize="@dimen/font_big" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_text"
        android:layout_marginLeft="@dimen/margin_largeXX"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_largeXX"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/radius_big">

        <ImageView
            android:id="@+id/ivPassword"
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/radius_big"
            android:src="@mipmap/ic_pass" />

        <com.vn.ntesco.views.NTesCoEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_largeXXXX"
            android:background="@null"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/font_big" />
    </androidx.cardview.widget.CardView>

    <com.vn.ntesco.views.NTesCoTextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_largeXX"
        android:text="@string/forgot_password"
        android:textColor="@color/grey_7d"
        android:textSize="@dimen/font_normal" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_text"
        android:layout_marginLeft="@dimen/margin_largeXX"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_largeXX"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="@dimen/radius_big">

        <com.vn.ntesco.views.NTesCoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_big"
            app:NTesCoTextViewFont="Bold" />
    </androidx.cardview.widget.CardView>

</LinearLayout>